--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html lang="uz/ru">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&  display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&  display=swap" rel="stylesheet">
 </head>
 <body>
   <header class="site-header">
@@ -23,18 +23,12 @@
         </div>
       </div>
       <div class="header-right">
-        <input class="search"type="search" name="" placeholder="       Поиск...">
-        <ul class="languages">
-          <li class="language language-active">
-            <a href="#">uz</a>
-          </li>
-          <li class="language">
-            <a href="#">ru</a>
-          </li>
-        </ul>
-        <div class="header-button">
-          <a class="header-button-link" href="#">Войти</a>
+        <input class="search"type="input" name="search" placeholder="       Поиск..." aria-label="search" required>
+        <div class="languages">
+            <a class="language language-active" href="#">УЗ</a>
+            <a class="language" href="#">РУ</a>
         </div>
+          <a class="button header-button" href="#">Войти</a>
       </div>
     </div>
   </header>
@@ -56,8 +50,108 @@
   </div>
   <hr class="header-line">
    <div >
-     <img class="header-bottom-img" src="img/optimize 1.png" alt="header-photo" width="1200" height="128" srcset="img/optimize 1.png 1x,img/optimize1@2x.png 2x">
+     <aside>
+       <a href="index.html">
+        <img class="header-bottom-img" src="img/optimize 1.png" alt="header-photo" width="1200" height="128" srcset="img/optimize 1.png 1x,img/optimize1@2x.png 2x">
+       </a>
+     </aside>
     </div>
-
+    <div class="main-cards">
+      <div class="cards">
+        <section class="card">
+          <h2 class="card-heading">
+            Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения
+          </h2>
+          <p class="card-text">
+            Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...
+          </p>
+          <img class="card-img" src="img/card_img1.png" alt="card1 image" srcset="img/card_img1.png 1x, img/card_img1@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img1b.svg" alt="card1 bottom-image">
+            <span  class="card-bottom-text">ИА Красная Весна 15:55</span>
+          </a>
+        </section>
+        <section class="card">
+          <h2 class="card-heading">
+            Ученые доказали экспериментальным путем пользу покровных культур
+          </h2>
+          <p class="card-text">
+            Новое исследование ученых университета Иллинойса объединяет полевые данные...
+          </p>
+          <img class="card-img" src="img/card_img2.png" alt="card1 image" srcset="img/card_img2.png 1x, img/card_img2@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img2b.svg" alt="card2 bottom-image">
+            <span class="card-bottom-text">Газета.Ru 12:54</span>
+          </a>
+        </section>
+        <section class="card">
+          <h2 class="card-heading">
+            Baidu запустила публичный сервис роботакси Apollo Go в <br> Шанхае
+          </h2>
+          <p class="card-text">
+            Автопарк Baidu состоит из модифицированных электромобилей EV...
+          </p>
+          <img class="card-img" src="img/card_img3.png" alt="card3 image" srcset="img/card_img3.png 1x, img/card_img3@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img3b.svg" alt="card3 bottom-image">
+            <span class="card-bottom-text">ИА Красная Весна 15:55</span>
+          </a>
+        </section>
+        <section class="card">
+          <h2 class="card-heading">
+            Стали известны ёмкости аккумуляторов всех моделей iPhone 13
+          </h2>
+          <p class="card-text">
+            Во время презентации iPhone 13 Apple придала большое значения...
+          </p>
+          <img class="card-img" src="img/card_img4.png" alt="card4 image" srcset="img/card_img4.png 1x, img/card_img4@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img4b.svg" alt="card4 bottom-image">
+            <span class="card-bottom-text">Digger.ru 14:25</span>
+          </a>
+        </section>
+        <section class="card">
+          <h2 class="card-heading">
+            Nature: ученые смогли доказать природное происхождение коронавируса SARS-CoV-2
+          </h2>
+          <p class="card-text">
+            Во время презентации iPhone 13 Apple придала большое значение...
+          </p>
+          <img class="card-img" src="img/card_img5.png" alt="card5 image" srcset="img/card_img5.png 1x, img/card_img5@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img5b.svg" alt="card5 bottom-image">
+            <span class="card-bottom-text">Lenta.ru 10:54</span>
+          </a>
+        </section>
+        <section class="card">
+          <div>
+            <h2 class="card-heading">
+              Китайская марка JAC повысила цены на лифтбек и пикап в <br> России
+            </h2>
+            <p class="card-text">
+              Две модели китайского бренда JAC из пяти, представленных на российском...
+            </p>
+          </div>
+          <img class="card-img" src="img/card_img6.png" alt="card6 image" srcset="img/card_img6.png 1x, img/card_img6@2x.png 2x" width="359" height="165" >
+          <a href="#"></a>
+          <a class="card-bottom-link" href="#">
+            <img class="card-bottom-img" src="img/card_img6b.svg" alt="card6 bottom-image">
+            <span class="card-bottom-text">Тарантас Ньюс 10:44</span>
+          </a>
+        </section>
+      </div>
+    </div>
+    <section class="notificatiom-bar">
+      <div class="notification-bar-container">
+        <span class="notification-bar-heading">
+          Хотите быть в курсе свежих новостей? <br> Включите уведомления!</span>
+        <a class="button notification-bar-button" href="#">Включит</a>
+      </div>
+    </section>
 </body>
 </html>
