show-more-section

--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <section class=" container global-news-section">
       <h2 class="container global-news-heading">В мире </h2>
        <div class="container global-news">
+         <!-- ==========GLOBAL-NEWS-LEFT====== -->
          <div class="global-news-left">
            <section class="section-left">
              <img class="section-left-img" src="img/image3-1.jpg" alt="picture of airplane" srcset="img/image3-1.jpg 1x, img/image3@2x-1.jpg 2x" width="210" height="165">
@@ -232,12 +233,17 @@
                </footer>
              </div>
            </section>
+           <div class="show-more">
+             <a class="show-more-link" href="#">Показать ещё</a>
+           </div>
          </div>
+
+         <!-- ============GLOBAL-NEWS-RIGHT========= -->
          <div class="global-news-right">
-           <section>
+           <section class="global-news-right-container">
              <h2 class="section-right-heading">Главное</h2>
              <div class="section-right-links">
-               <h3>
+               <h3 class="section-right-link-title">
                  <a class="section-right-link" href="#">В Фергане создадут узбекско-пакистанский университет</a>
                </h3>
                <div class="right-link-source-time">
@@ -246,7 +252,7 @@
                </div>
               </div>
              <div class="section-right-links">
-               <h3>
+               <h3 class="section-right-link-title">
                  <a class="section-right-link" href="#">Узбекистан утвердил соглашение о содействии занятости в странах СНГ</a>
                </h3>
                <div class="right-link-source-time">
@@ -255,7 +261,7 @@
                </div>
               </div>
              <div class="section-right-links">
-               <h3>
+               <h3 class="section-right-link-title">
                  <a class="section-right-link" href="#">В Узбекистане увеличиваются очереди за автомобилями UzAuto</a>
                </h3>
                <div class="right-link-source-time">
@@ -264,7 +270,7 @@
                </div>
               </div>
              <div class="section-right-links">
-               <h3>
+               <h3 class="section-right-link-title">
                  <a class="section-right-link" href="#">Минтуризма опровергло приостановку выплат за шаги</a>
                </h3>
                <div class="right-link-source-time">
