--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
   <!-- =========HEADER======= -->
@@ -292,9 +292,11 @@
     <footer class="container site-footer">
       <!-- =========FOOTER-TOP========= -->
       <section class="footer-top">
-        <a href="#" class="footer-logo" >
-          <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
-        </a>
+        <div class="site-footer-logo-wrapper">
+          <a href="#" class="footer-logo" >
+            <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
+          </a>
+        </div>
         <section class="footer-top-contents-wrapper">
           <ul class="contents-footer">
             <li class="item-footer-content">
@@ -326,8 +328,8 @@
               </a>
             </li>
           </ul>
-                </section>
         </section>
+      </section>
       <!-- =========FOOTER-BOTTOM========= -->
       <section class="footer-bottom">
         <h3 class="footer-bottom-heading">
@@ -335,17 +337,17 @@
         </h3>
         <ul class="footer-socials">
           <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#">
+            <a class="footer-socials-link" href="#" target="_blank">
               <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
             </a>
           </li>
           <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#">
+            <a class="footer-socials-link" href="#" target="_blank">
               <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
             </a>
           </li>
           <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#">
+            <a class="footer-socials-link" href="#" target="_blank">
               <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
             </a>
           </li>
@@ -357,5 +359,5 @@
         </ul>
       </section>
     </footer>
-  </body>
-  </html>
+    </body>
+    </html>
