--- a/liist-index.html
+++ b/liist-index.html
@@ -213,7 +213,7 @@
           </div>
         </section>
         <div class="show-more">
-          <a class="show-more-link" href="index-list.html">Показать ещё</a>
+          <a class="show-more-link" href="https//index-list.html">Показать ещё</a>
         </div>
       </div>
 
