--- a/article-index.html
+++ b/article-index.html
@@ -73,17 +73,18 @@
   <img src="list_img/article-main-photo.png" alt="picture of tesla car" srcset="list_img/article-main-photo.png 1x, list_img/article-main-photo@2x.png 2x" width="797" height="300">
   <p class="article-section-left-text">
     Илон Маск (Elon Musk, Руководитель фирмы Tesla и других проектов) уже второй раз за полторы недели обратился к китайским правящим кругам и гражданам. В видеоролике он уверил их в своей готовности инвестировать средства в развитие и расширять бизнес на территории этой страны. Особое внимание будет уделяться небезопасности обрабатываемых данных.
-
-    Они будут храниться только в самом Китае и поэтому будут доступны правительству Поднебесной в любой момент.
-
-    Новые заявления Илон Маск сделал во время видеообращения к аудитории мероприятия World Internet Conference, которое прошло в конце недели в Поднебесной. Компанию ему составили руководители Cisco Systems (Чак Роббинс), Intel (Пэт Гелсингер) и Qualcomm (Кристиано Амон), а интересы бизнеса Китайской Народной Республики представляли руководители Alibaba и Xiaomi.
-
-    Открывал мероприятие Лю Хэ (Liu He, Вице-премьер Госсовета КНР), который привёл слова Си Цзиньпина (Xi Jinping) о стремлении Поднебесной работать со всеми державами над созданием прозрачной цифровой экономики.
-
-    В ближайшее время Tesla собирается не только сделать шире объёмы производства автомобилей на электрической тяге в шанхайском филиале, но и разработать силами местной студии недорогую модель электрического автомобиля (стоимостью менее 25 000 долларов).
-
-     Уже в настоящий момент собранные в Китайской Народной Республике электрокары Tesla Model Y и Model 3 поставляются на экспорт в Европу.
   </p>
+  <p class="article-section-left-text">
+    Они будут храниться только в самом Китае и поэтому будут доступны правительству Поднебесной в любой момент.
+  </p>
+
+    <p class="article-section-left-text">Новые заявления Илон Маск сделал во время видеообращения к аудитории мероприятия World Internet Conference, которое прошло в конце недели в Поднебесной. Компанию ему составили руководители Cisco Systems (Чак Роббинс), Intel (Пэт Гелсингер) и Qualcomm (Кристиано Амон), а интересы бизнеса Китайской Народной Республики представляли руководители Alibaba и Xiaomi.</p>
+
+    <p class="article-section-left-text">Открывал мероприятие Лю Хэ (Liu He, Вице-премьер Госсовета КНР), который привёл слова Си Цзиньпина (Xi Jinping) о стремлении Поднебесной работать со всеми державами над созданием прозрачной цифровой экономики.</p>
+
+    <p class="article-section-left-text">В ближайшее время Tesla собирается не только сделать шире объёмы производства автомобилей на электрической тяге в шанхайском филиале, но и разработать силами местной студии недорогую модель электрического автомобиля (стоимостью менее 25 000 долларов).</p>
+
+     <p class="article-section-left-text">Уже в настоящий момент собранные в Китайской Народной Республике электрокары Tesla Model Y и Model 3 поставляются на экспорт в Европу.</p>
 </div>
 
       <!-- ============GLOBAL-NEWS-RIGHT========= -->
