--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <hr class="header-line">
   <div >
     <aside>
-      <a href="index.html">
+      <a href="article-index.html">
         <img class="header-bottom-img" src="img/optimize1.png" alt="header-photo" width="1200" height="128" srcset="img/optimize1.png 1x,img/optimize1@2x.png 2x">
       </a>
     </aside>
@@ -251,7 +251,7 @@
             </div>
           </section>
           <div class="show-more">
-            <a class="show-more-link" href="#">Показать ещё</a>
+            <a class="show-more-link" href="article-index.html">Показать ещё</a>
           </div>
         </div>
 
