--- a/article-index.html
+++ b/article-index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Namanganliklar24</title>
+  <title>ArticleN24</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -128,7 +128,7 @@
             </div>
           </div>
         </section>
-        <img class="section-right-img list-section-right-img" src="img/image6.jpg" alt="" srcset="img/image6.jpg 1x, img/image6@2x.jpg 2x" width="393" height="338">
+        <img class="section-right-img " src="img/image6.jpg" alt="" srcset="img/image6.jpg 1x, img/image6@2x.jpg 2x" width="393" height="338">
       </div>
     </div>
   </section>
@@ -189,77 +189,78 @@
 
 
   <!-- ===========FOOTER======= -->
-  <footer class="container site-footer">
+  <footer class=" site-footer">
 
-    <!-- =========FOOTER-TOP========= -->
-    <section class="footer-top">
-      <div class="site-footer-logo-wrapper">
-        <a href="#" class="footer-logo" >
-          <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
-        </a>
-      </div>
-      <section class="footer-top-contents-wrapper">
-        <ul class="contents-footer">
-          <li class="item-footer-content">
-            <a class="contents-footer-link" href="#">
-              Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+    <div class="footer-container">
+      <!-- =========FOOTER-TOP========= -->
+      <section class="footer-top">
+        <div class="site-footer-logo-wrapper">
+          <a href="#" class="footer-logo" >
+            <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
+          </a>
+        </div>
+        <section class="footer-top-contents-wrapper">
+          <ul class="contents-footer">
+            <li class="item-footer-content">
+              <a class="contents-footer-link" href="#">
+                Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-contents">
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+          </ul>
+          <ul class="footer-contents">
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#" >
+                Использование материалов
+              </a>
+            </li>
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#">
+                Темы дня
+              </a>
+            </li>
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#" >
+                Наша команда
+              </a>
+            </li>
+          </ul>
+        </section>
+      </section>
+      <!-- =========FOOTER-BOTTOM========= -->
+      <section class="footer-bottom">
+        <h3 class="footer-bottom-heading">
+          Наши <br> социальные сети
+        </h3>
+        <ul class="footer-socials">
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
             </a>
           </li>
-        </ul>
-        <ul class="footer-contents">
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-        </ul>
-        <ul class="footer-contents">
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#" >
-              Использование материалов
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
             </a>
           </li>
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#">
-              Темы дня
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
             </a>
           </li>
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#" >
-              Наша команда
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#">
+              <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
             </a>
           </li>
         </ul>
       </section>
-    </section>
-
-    <!-- =========FOOTER-BOTTOM========= -->
-    <section class="footer-bottom">
-      <h3 class="footer-bottom-heading">
-        Наши <br> социальные сети
-      </h3>
-      <ul class="footer-socials">
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#">
-            <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
-          </a>
-        </li>
-      </ul>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
