--- a/contact.html
+++ b/contact.html
@@ -56,100 +56,127 @@
   <!-- ===========CONTACTS=========== -->
   <main class="contacts">
     <div class="container contacts-container">
-      <form action="https://echo.htmlacademy.ru" method="post">
-        <h1>Напишите нам</h1>
-        <div>
-          <input class="contact-name" type="text" name="full-name" placeholder="Имя" required>
-          <input class="contact-number" type="number" name="phone-number" placeholder="Номер телефона" required>
+      <form class="contacts-form" action="https://echo.htmlacademy.ru" method="post">
+        <h1 class="form-heading">Напишите нам</h1>
+        <div class="contact-forms-item">
+          <input class="contact-form-field contact-name" type="text" name="full-name" placeholder="Имя" required>
+          <input class="contact-form-field contact-number" type="number" name="phone-number" placeholder="Номер телефона" required>
         </div>
-        <div>
-          <input class="contact-email" type="email" name="email" placeholder="Электронная почта" required>
+        <div >
+          <input class="contact-form-field contact-email" type="email" name="email" placeholder="Электронная почта" required>
         </div>
-        <div>
-          <label class="contact-text" for="text-input"></label>
-          <textarea name="message" id="text-input" placeholder="Текст"></textarea>
+        <div >
+          <label for="text-input"></label>
+          <textarea  class="contact-form-field contact-text" name="message" id="text-input" placeholder="Текст"></textarea>
         </div>
         <button class="contact-button button" type="submit">
           <!-- <a href="#">Отправить</a> -->
           Отправить
         </button>
-        <aside class="contact-info">
-
-        </aside>
       </form>
+        <aside class="contact-info">
+          <dl class="contact-info-card">
+            <dt class="contact-info-card-title">
+              Электронная почта
+            </dt>
+            <dd class="contact-info-card-value">
+              <a href="mailto:info@namanganliklar24.uz">info@namanganliklar24.uz</a>
+            </dd>
+          </dl>
+          <dl class="contact-info-card">
+            <dt class="contact-info-card-title">
+              Номер телефона
+            </dt>
+            <dd class="contact-info-card-value">
+              <a href="tel:+998 88 522-54-76">+998 88 522-54-76</a>
+            </dd>
+          </dl>
+          <dl class="contact-info-card">
+            <dt class="contact-info-card-title">
+              Адрес
+            </dt>
+            <dd class="contact-info-card-value">
+              Ташкент, площадь Мустакиллик, 6
+            </dd>
+          </dl>
+        </aside>
+
     </div>
   </main>
 
   <!-- ===========FOOTER======= -->
-  <footer class="container site-footer">
-    <!-- =========FOOTER-TOP========= -->
-    <section class="footer-top">
-      <div class="site-footer-logo-wrapper">
-        <a href="#" class="footer-logo" >
-          <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
-        </a>
-      </div>
-      <section class="footer-top-contents-wrapper">
-        <ul class="contents-footer">
-          <li class="item-footer-content">
-            <a class="contents-footer-link" href="#">
-              Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+  <footer class=" site-footer">
+
+    <div class="footer-container">
+      <!-- =========FOOTER-TOP========= -->
+      <section class="footer-top">
+        <div class="site-footer-logo-wrapper">
+          <a href="#" class="footer-logo" >
+            <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
+          </a>
+        </div>
+        <section class="footer-top-contents-wrapper">
+          <ul class="contents-footer">
+            <li class="item-footer-content">
+              <a class="contents-footer-link" href="#">
+                Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+              </a>
+            </li>
+          </ul>
+          <ul class="footer-contents">
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
+            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+          </ul>
+          <ul class="footer-contents">
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#" >
+                Использование материалов
+              </a>
+            </li>
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#">
+                Темы дня
+              </a>
+            </li>
+            <li class="footer-content-item">
+              <a class="footer-content-link" href="#" >
+                Наша команда
+              </a>
+            </li>
+          </ul>
+        </section>
+      </section>
+      <!-- =========FOOTER-BOTTOM========= -->
+      <section class="footer-bottom">
+        <h3 class="footer-bottom-heading">
+          Наши <br> социальные сети
+        </h3>
+        <ul class="footer-socials">
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
             </a>
           </li>
-        </ul>
-        <ul class="footer-contents">
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
-          <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-        </ul>
-        <ul class="footer-contents">
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#" >
-              Использование материалов
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
             </a>
           </li>
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#">
-              Темы дня
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#" target="_blank">
+              <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
             </a>
           </li>
-          <li class="footer-content-item">
-            <a class="footer-content-link" href="#" >
-              Наша команда
+          <li class="footer-socials-item">
+            <a class="footer-socials-link" href="#">
+              <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
             </a>
           </li>
         </ul>
       </section>
-    </section>
-    <!-- =========FOOTER-BOTTOM========= -->
-    <section class="footer-bottom">
-      <h3 class="footer-bottom-heading">
-        Наши <br> социальные сети
-      </h3>
-      <ul class="footer-socials">
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#" target="_blank">
-            <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
-          </a>
-        </li>
-        <li class="footer-socials-item">
-          <a class="footer-socials-link" href="#">
-            <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
-          </a>
-        </li>
-      </ul>
-    </section>
+    </div>
   </footer>
 </body>
 </html>
