--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <a class="language language-active" href="#">УЗ</a>
           <a class="language" href="#">РУ</a>
         </div>
-        <a class="button header-button" href="#">Войти</a>
+        <a class="button header-button" href="contact.html">Войти</a>
       </div>
     </div>
   </header>
@@ -65,7 +65,7 @@
     <div class="cards">
       <article class="card">
         <h2 class="card-heading">
-          Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения
+          <a class="card-heading-link" href="#">Кандидат на пост канцлера ФРГ Шольц назвал условия коалиционного соглашения</a>
         </h2>
         <p class="card-text">
           Лидер Социал-демократической партии Германии (СДПГ) и кандидат на должность...
@@ -81,7 +81,7 @@
       </article>
       <article class="card">
         <h2 class="card-heading">
-          Ученые доказали экспериментальным путем пользу покровных культур
+          <a class="card-heading-link" href="">Ученые доказали экспериментальным путем пользу покровных культур</a>
         </h2>
         <p class="card-text">
           Новое исследование ученых университета Иллинойса объединяет полевые данные...
@@ -97,7 +97,7 @@
       </article>
       <article class="card">
         <h2 class="card-heading">
-          Baidu запустила публичный сервис роботакси Apollo Go в Шанхае
+          <a class="card-heading-link" href="">Baidu запустила публичный сервис роботакси Apollo Go в Шанхае</a>
         </h2>
         <p class="card-text">
           Автопарк Baidu состоит из модифицированных электромобилей EV...
@@ -112,7 +112,7 @@
       </article>
       <article class="card">
         <h2 class="card-heading">
-          Стали известны ёмкости аккумуляторов всех моделей iPhone 13
+          <a class="card-heading-link" href="">Стали известны ёмкости аккумуляторов всех моделей iPhone 13</a>
         </h2>
         <p class="card-text">
           Во время презентации iPhone 13 Apple придала большое значения...
@@ -128,7 +128,7 @@
       </article>
       <article class="card">
         <h2 class="card-heading">
-          Nature: ученые смогли доказать природное происхождение коронавируса SARS-CoV-2
+          <a class="card-heading-link" href="">Nature: ученые смогли доказать природное происхождение коронавируса SARS-CoV-2</a>
         </h2>
         <p class="card-text">
           Во время презентации iPhone 13 Apple придала большое значение...
@@ -145,7 +145,7 @@
       <article class="card">
         <div>
           <h2 class="card-heading">
-            Китайская марка JAC повысила цены на лифтбек и пикап в России
+            <a class="card-heading-link" href="">Китайская марка JAC повысила цены на лифтбек и пикап в России</a>
           </h2>
           <p class="card-text">
             Две модели китайского бренда JAC из пяти, представленных на российском...
@@ -301,75 +301,78 @@
       </div>
     </section>
     <!-- ===========FOOTER======= -->
-    <footer class="container site-footer">
-      <!-- =========FOOTER-TOP========= -->
-      <section class="footer-top">
-        <div class="site-footer-logo-wrapper">
-          <a href="#" class="footer-logo" >
-            <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
-          </a>
-        </div>
-        <section class="footer-top-contents-wrapper">
-          <ul class="contents-footer">
-            <li class="item-footer-content">
-              <a class="contents-footer-link" href="#">
-                Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+    <footer class=" site-footer">
+
+      <div class="footer-container">
+        <!-- =========FOOTER-TOP========= -->
+        <section class="footer-top">
+          <div class="site-footer-logo-wrapper">
+            <a href="#" class="footer-logo" >
+              <img class="footer-img" src="img/logo-footer.png" alt="site-logo" width="264" height="28" srcset="img/logo-footer.png 1x,img/logo-footer@2x.png 2x">
+            </a>
+          </div>
+          <section class="footer-top-contents-wrapper">
+            <ul class="contents-footer">
+              <li class="item-footer-content">
+                <a class="contents-footer-link" href="#">
+                  Воспроизводство, копирование, использование информации с сайта «NAMANGANLIKLAR24.UZ» возможно только с предварительного письменного разрешения редакции.
+                </a>
+              </li>
+            </ul>
+            <ul class="footer-contents">
+              <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+              <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
+              <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
+              <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
+            </ul>
+            <ul class="footer-contents">
+              <li class="footer-content-item">
+                <a class="footer-content-link" href="#" >
+                  Использование материалов
+                </a>
+              </li>
+              <li class="footer-content-item">
+                <a class="footer-content-link" href="#">
+                  Темы дня
+                </a>
+              </li>
+              <li class="footer-content-item">
+                <a class="footer-content-link" href="#" >
+                  Наша команда
+                </a>
+              </li>
+            </ul>
+          </section>
+        </section>
+        <!-- =========FOOTER-BOTTOM========= -->
+        <section class="footer-bottom">
+          <h3 class="footer-bottom-heading">
+            Наши <br> социальные сети
+          </h3>
+          <ul class="footer-socials">
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="#" target="_blank">
+                <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
               </a>
             </li>
-          </ul>
-          <ul class="footer-contents">
-            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-            <li class="footer-content-item"><a class="footer-content-link" href="#" >Напишите нам</a></li>
-            <li class="footer-content-item"><a class="footer-content-link" href="#" >Реклама</a></li>
-            <li class="footer-content-item"><a class="footer-content-link" href="#" >Информация о сайте</a></li>
-          </ul>
-          <ul class="footer-contents">
-            <li class="footer-content-item">
-              <a class="footer-content-link" href="#" >
-                Использование материалов
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="#" target="_blank">
+                <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
               </a>
             </li>
-            <li class="footer-content-item">
-              <a class="footer-content-link" href="#">
-                Темы дня
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="#" target="_blank">
+                <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
               </a>
             </li>
-            <li class="footer-content-item">
-              <a class="footer-content-link" href="#" >
-                Наша команда
+            <li class="footer-socials-item">
+              <a class="footer-socials-link" href="#">
+                <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
               </a>
             </li>
           </ul>
         </section>
-      </section>
-      <!-- =========FOOTER-BOTTOM========= -->
-      <section class="footer-bottom">
-        <h3 class="footer-bottom-heading">
-          Наши <br> социальные сети
-        </h3>
-        <ul class="footer-socials">
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#" target="_blank">
-              <img src="img/icon-facebook.svg" alt="facebook-icon" width="25" height="25">
-            </a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#" target="_blank">
-              <img src="img/icon-instagram.svg" alt="instagram-icon" width="25" height="25">
-            </a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#" target="_blank">
-              <img src="img/icon-telegram.svg" alt="telegram-icon" width="25" height="25">
-            </a>
-          </li>
-          <li class="footer-socials-item">
-            <a class="footer-socials-link" href="#">
-              <img src="img/icon-youtube.svg" alt="youtube-icon" width="25" height="25">
-            </a>
-          </li>
-        </ul>
-      </section>
+      </div>
     </footer>
     </body>
     </html>
